fix: remove white right margin overflow from full-width sections
- Added max-width: 100vw to .full-width-section class
- Prevents horizontal overflow caused by scrollbar width calculation
- Fixes white space on right edge of page
- Maintains existing full-width breakout functionality on all sections

--- a/css/4-layout.css
+++ b/css/4-layout.css
@@ -46,6 +46,7 @@
   /* Full-width sections */
   .full-width-section {
     width: 100%;
+    max-width: 100vw;
     margin-left: calc(-50vw + 50%);
     margin-right: calc(-50vw + 50%);
     box-sizing: border-box;
